Fixed bugs, added authentication to some methods. (#2)